# ichthus_control

./: .gitignore  README.md
ichthus_driver/: .gitignore  CMakeLists.txt  can_number.txt  package.xml
ichthus_driver/cfg/: kia.yaml  mcm.yaml
ichthus_driver/include/ichthus_driver/: CANAdapter.h  CRC.h  MCMSignal.h  SLCAN.h  SocketCAN.h  kia_reader.hpp  mcm_management.hpp
ichthus_driver/launch/: ichthus_driver.launch.py
ichthus_driver/src/driver/: SocketCAN.cpp
ichthus_driver/src/kia/: kia_node.cpp  kia_reader.cpp
ichthus_driver/src/mcm/: mcm_management.cpp  mcm_node.cpp
ichthus_msgs/: CMakeLists.txt  package.xml
ichthus_msgs/log/: latest_build
pid_control/: CMakeLists.txt  package.xml
pid_control/cfg/: pid.yaml
pid_control/include/pid_control/: '  pid_controller.hpp
pid_control/src/: pid_controller.cpp  pid_node.cpp
